Bug 410698 - Pan/zoom/rotate with trackpad gestures doesn't work correctly
Summary: Pan/zoom/rotate with trackpad gestures doesn't work correctly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 4.2.5
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
: 410550 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-07 14:55 UTC by Mikolaj Kamler
Modified: 2019-08-13 18:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikolaj Kamler 2019-08-07 14:55:44 UTC
SUMMARY
When using one of the two-finger gestures (in MacOS - pinch to zoom, swipe to pan etc.), the canvas reacts as if all the gestures have been made at the same time.

STEPS TO REPRODUCE
1. Open a document
2. Use a two finger gesture on the canvas (i.e. two finger-swipe for panning, pinch to zoom and two finger rotate - default gestures in MacOS)

OBSERVED RESULT
Instead of the expected effect of one gesture (i.e. panning), the canvas reacts as if all the gestures have been made at the same time - when I pan with two finers swipe, the canvas pans, zooms and rotates at the same time. There is some lagging as well - that is, the movement of the canvas continues even when I stop moving my fingers.

EXPECTED RESULT
The expected result of the gesture - panning when I swipe, zooming when I pinch, rotating when I rotate.

SOFTWARE/OS VERSIONS
Windows: 
macOS: Mac OS X 10.14.6
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
I tested this behavior on my MacBookPro's trackpad, as well as on an external Apple trackpad.
This erratic behavior is new as of version 4.2.4 of Krita and is still present in 4.2.5.
It wasn't there in 4.2.3.
Comment 1 vanyossi 2019-08-08 20:09:24 UTC
thanks for reporting this, we are working on a fix for this.
Comment 2 vanyossi 2019-08-08 20:56:49 UTC
*** Bug 410550 has been marked as a duplicate of this bug. ***
Comment 3 vanyossi 2019-08-11 09:40:22 UTC
Git commit 5c924880be8eae60fb879bba302409443906b375 by Ivan Yossi.
Committed on 10/08/2019 at 14:00.
Pushed by ivany into branch 'master'.

Fix mixed Zoom, Pan, Rotate on macOS

This should fix the action by avoiding setting the max/min
touch points letting NativeGesture take control on macOS.

M  +2    -0    libs/ui/input/kis_input_manager_p.cpp

https://invent.kde.org/kde/krita/commit/5c924880be8eae60fb879bba302409443906b375
Comment 4 vanyossi 2019-08-13 18:48:18 UTC
Git commit 56c77bb7f071127591738f16a69b3b720b83b97a by Ivan Yossi.
Committed on 13/08/2019 at 18:47.
Pushed by ivany into branch 'krita/4.2'.

Fix mixed Zoom, Pan, Rotate on macOS

This should fix the action by avoiding setting the max/min
touch points letting NativeGesture take control on macOS.

M  +2    -0    libs/ui/input/kis_input_manager_p.cpp

https://invent.kde.org/kde/krita/commit/56c77bb7f071127591738f16a69b3b720b83b97a