Fix mixed Zoom, Pan, Rotate on macOS

This should fix the action by avoiding setting the max/min
touch points letting NativeGesture take control on macOS.

BUG:410698